--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     {% if site.footer_fixed %}
     <footer class="fixed-bottom">
-      <div class="container mt-0">
+      <div class="container mt-0", style="text-align: center;">
         &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
         {%- if site.impressum_path -%}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
@@ -11,7 +11,7 @@
       </div>
     </footer>
     {%- else -%}
-    <footer class="sticky-bottom mt-5">
+    <footer class="sticky-bottom mt-5", style="text-align: center;">
       <div class="container">
         &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
         {%- if site.impressum_path -%}
